--- a/config/config
+++ b/config/config
@@ -5,7 +5,7 @@ lxc.uts.name = waydroid
 lxc.arch = armv7l
 lxc.autodev = 0
 # lxc.autodev.tmpfs.size = 25000000
-lxc.apparmor.profile = unconfined
+# lxc.apparmor.profile = unconfined
 
 lxc.init.cmd = /init
 
