--- a/config/waydroid.cfg
+++ b/config/waydroid.cfg
@@ -6,7 +6,7 @@ vendor_datetime = 1632985744
 images_path = /var/lib/waydroid/images
 system_ota = https://raw.githubusercontent.com/waydroid/OTA/master/system/lineage/waydroid_arm/VANILLA.json
 vendor_ota = https://raw.githubusercontent.com/waydroid/OTA/master/vendor/waydroid_arm/MAINLINE.json
-binder = anbox-binder
-vndbinder = anbox-vndbinder
-hwbinder = anbox-hwbinder
+binder = puddlejumper
+vndbinder = vndpuddlejumper
+hwbinder = hwpuddlejumper
 
